--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -29,12 +29,12 @@ body{
 
 
 .one{
-font-family: 'Inter';
-font-size: 30px;
+    font-family: 'Inter';
+    font-size: 30px;
 }
 .two{
-font-family: 'Space Grotesk', sans-serif;
-font-size: 30px;
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 30px;
 }
 .three{
     font-family: 'Work Sans', sans-serif;
@@ -1286,23 +1286,10 @@ span-but{
 
 .grid-img{
     width: 100%;
-    /* width: 20%; */
-    /* height: 400px; */
-
 }
 
-.spiral{
-    position: relative;
-}
-
-/* .spiral img{
-    position: absolute;
-    margin-left: 800px;
-
-} */
 .project-box{
     display: block;
-    /* position: relative; */
     background: url(img-com/Apple-Newsletter2.png) no-repeat;
     background-size: cover; 
     width: 100%;
@@ -1408,6 +1395,8 @@ span-but{
     opacity: 0;
     transition: all 0.3s ease-in-out; 
     overflow: hidden;
+    display: flex;
+    align-items: center;
   }
 
   .grey-bg:hover{
@@ -1420,63 +1409,25 @@ span-but{
 }
 
   
-  .project-box .grey-bg:hover .project-info .project-details {
+  .project-box .grey-bg:hover .project-info .project-details,
+  .project-box1 .grey-bg:hover .project-info .project-details,
+  .project-box2 .grey-bg:hover .project-info .project-details,
+  .project-box3 .grey-bg:hover .project-info .project-details,
+  .project-box4 .grey-bg:hover .project-info .project-details,
+  .project-box5 .grey-bg:hover .project-info .project-details  {
     -webkit-transform: translate3d(10px, 0, 0);
             transform: translate3d(10px, 0, 0);
     opacity: 1;
   }
 
-  .project-box1 .grey-bg:hover .project-info .project-details {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-  }
 
-  .project-box2 .grey-bg:hover .project-info .project-details {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-  }
-  
-  .project-box3 .grey-bg:hover .project-info .project-details {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-  }
 
-  .project-box4 .grey-bg:hover .project-info .project-details {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-  }
-
-  .project-box5 .grey-bg:hover .project-info .project-details {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-  }
-
-  .project-box .grey-bg:hover .project-info .project-title {
-    opacity: 1;
-  }
-
-  .project-box1 .grey-bg:hover .project-info .project-title {
-    opacity: 1;
-  }
-
-  .project-box2 .grey-bg:hover .project-info .project-title {
-    opacity: 1;
-  }
-
-  .project-box3 .grey-bg:hover .project-info .project-title {
-    opacity: 1;
-  }
-
-  .project-box4 .grey-bg:hover .project-info .project-title {
-    opacity: 1;
-  }
-
-  .project-box5 .grey-bg:hover .project-info .project-title {
+  .project-box .grey-bg:hover .project-info .project-title,
+  .project-box1 .grey-bg:hover .project-info .project-title,
+  .project-box2 .grey-bg:hover .project-info .project-title,
+  .project-box3 .grey-bg:hover .project-info .project-title,
+  .project-box4 .grey-bg:hover .project-info .project-title,
+  .project-box5 .grey-bg:hover .project-info .project-title    {
     opacity: 1;
   }
 
@@ -1495,19 +1446,19 @@ span-but{
   }
 
 
-  #project-title1, #project-details1{
+  #project-title1, #project-details1, #github1{
     color: purple;
   }
 
-  #project-title2, #project-details2{
+  #project-title2, #project-details2, #github2{
     color: deepskyblue;
   }
 
-  #project-title3, #project-details3{
+  #project-title3, #project-details3, #github3{
     color: #f1564e;
   }
 
-  #project-title4, #project-details4{
+  #project-title4, #project-details4, #github4{
     color: #f1564e;
   }
 
@@ -1522,14 +1473,11 @@ span-but{
   .project-explain{
     font-size: 1.1rem;
     line-height: 25px;
-    color: #000000;
-    font-weight: 500;
-
+    color: #333333;
+    font-weight: 700;
+    font-family: 'Space Grotesk', sans-serif;
   }
 
-  /* .button:hover:nth-child(1), .button:nth-child(1):focus{
-    color: #046a00;
-} */
 
   .project-box .grey-bg .project-info, 
   .project-box1 .grey-bg .project-info, 
@@ -1537,46 +1485,11 @@ span-but{
   .project-box3 .grey-bg .project-info, 
   .project-box4 .grey-bg .project-info,
   .project-box5 .grey-bg .project-info {
-    padding: 56px;
+    padding: 30px 20px;
     position: absolute;
     /* margin-top: 100px; */
     width: 100%;
   }
-
-  /* .project-box1 .grey-bg .project-info {
-    padding: 56px;
-    position: absolute;
-    margin-top: 100px;
-    width: 100%;
-  }
-
-  .project-box2 .grey-bg .project-info {
-    padding: 56px;
-    position: absolute;
-    margin-top: 100px;
-    width: 100%;
-  }
-
-  .project-box3 .grey-bg .project-info {
-    padding: 56px;
-    position: absolute;
-    margin-top: 100px;
-    width: 100%;
-  }
-
-  .project-box4 .grey-bg .project-info {
-    padding: 56px;
-    position: absolute;
-    margin-top: 100px;
-    width: 100%;
-  }
-
-  .project-box5 .grey-bg .project-info {
-    padding: 56px;
-    position: absolute;
-    margin-top: 100px;
-    width: 100%;
-  } */
 
 
 
@@ -1588,7 +1501,8 @@ span-but{
     transform: translate3d(-200px, 0, 0); 
     transition: all .3s ease-in-out;
     opacity: 0;
-    font-weight: 400;
+    font-weight: 500;
+    color: red;
 }
 
 
@@ -1605,46 +1519,11 @@ span-but{
     opacity: 0;
   } */
   
-  .project-box .grey-bg .project-info .project-title {
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-left: 7px;
-    opacity: 0;
-  }
-
-  .project-box1 .grey-bg .project-info .project-title {
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-left: 7px;
-    opacity: 0;
-  }
-
-  .project-box2 .grey-bg .project-info .project-title {
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-left: 7px;
-    opacity: 0;
-  }
-
-  .project-box3 .grey-bg .project-info .project-title {
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-left: 7px;
-    opacity: 0;
-  }
-
-  .project-box4 .grey-bg .project-info .project-title {
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-left: 7px;
-    opacity: 0;
-  }
-
+  .project-box .grey-bg .project-info .project-title,
+  .project-box1 .grey-bg .project-info .project-title,
+  .project-box2 .grey-bg .project-info .project-title,
+  .project-box3 .grey-bg .project-info .project-title,
+  .project-box4 .grey-bg .project-info .project-title,
   .project-box5 .grey-bg .project-info .project-title {
     font-size: 1.8rem;
     text-transform: uppercase;
@@ -1654,114 +1533,24 @@ span-but{
   }
 
 
-.project-box .grey-bg:hover .project-info .fa-long-arrow-alt-right {
+.project-box .grey-bg:hover .project-info .fa-long-arrow-alt-right,
+.project-box1 .grey-bg:hover .project-info .fa-long-arrow-alt-right,
+.project-box2 .grey-bg:hover .project-info .fa-long-arrow-alt-right,
+.project-box3 .grey-bg:hover .project-info .fa-long-arrow-alt-right,
+.project-box4 .grey-bg:hover .project-info .fa-long-arrow-alt-right,
+.project-box5 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
     -webkit-transform: translate3d(10px, 0, 0);
             transform: translate3d(10px, 0, 0);
     opacity: 1;
     color: red;
 
   }
-
-  .project-box1 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-    color: red;
-
-  }
-
-  .project-box2 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-    color: red;
-
-  }
-
-  .project-box3 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-    color: red;
-
-  }
-
-  .project-box4 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-    color: red;
-
-  }
-
-  .project-box5 .grey-bg:hover .project-info .fa-long-arrow-alt-right {
-    -webkit-transform: translate3d(10px, 0, 0);
-            transform: translate3d(10px, 0, 0);
-    opacity: 1;
-    color: red;
-
-  }
-
-  .project-box .grey-bg .project-info .fa-long-arrow-alt-right {
-    position: absolute;
-    bottom: 0;
-    right: 56px;
-    font-size: 3rem;
-    -webkit-transform: translate3d(200px, 0, 0);
-            transform: translate3d(200px, 0, 0);
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    opacity: 0;
-  }
-
-  .project-box1 .grey-bg .project-info .fa-long-arrow-alt-right {
-    position: absolute;
-    bottom: 0;
-    right: 56px;
-    font-size: 3rem;
-    -webkit-transform: translate3d(200px, 0, 0);
-            transform: translate3d(200px, 0, 0);
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    opacity: 0;
-  }
-
-  .project-box2 .grey-bg .project-info .fa-long-arrow-alt-right {
-    position: absolute;
-    bottom: 0;
-    right: 56px;
-    font-size: 3rem;
-    -webkit-transform: translate3d(200px, 0, 0);
-            transform: translate3d(200px, 0, 0);
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    opacity: 0;
-  }
-
-  .project-box3 .grey-bg .project-info .fa-long-arrow-alt-right {
-    position: absolute;
-    bottom: 0;
-    right: 56px;
-    font-size: 3rem;
-    -webkit-transform: translate3d(200px, 0, 0);
-            transform: translate3d(200px, 0, 0);
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    opacity: 0;
-  }
-
-  .project-box4 .grey-bg .project-info .fa-long-arrow-alt-right {
-    position: absolute;
-    bottom: 0;
-    right: 56px;
-    font-size: 3rem;
-    -webkit-transform: translate3d(200px, 0, 0);
-            transform: translate3d(200px, 0, 0);
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    opacity: 0;
-  }
-
+  
+  .project-box .grey-bg .project-info .fa-long-arrow-alt-right,
+  .project-box1 .grey-bg .project-info .fa-long-arrow-alt-right,
+  .project-box2 .grey-bg .project-info .fa-long-arrow-alt-right,
+  .project-box3 .grey-bg .project-info .fa-long-arrow-alt-right,
+  .project-box4 .grey-bg .project-info .fa-long-arrow-alt-right,
   .project-box5 .grey-bg .project-info .fa-long-arrow-alt-right {
     position: absolute;
     bottom: 0;
